<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".VideoGame_ConceptsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/videogame_concepts_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="26sp"
        android:paddingBottom="10dp"
        android:text="@string/Videogame_idea_label"
        android:textColor="@color/teal_700" />
    <EditText
        android:id="@+id/videogame_concepts_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="24sp"
        android:paddingBottom="25dp"
        android:hint="@string/Videogame_idea_field"
        android:textColor="@color/teal_700" />

    <TextView
        android:id="@+id/videogame_description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="26sp"
        android:paddingBottom="10dp"
        android:text="@string/Videogame_description_label"
        android:textColor="@color/teal_700" />
    <EditText
        android:id="@+id/Videogame_description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="24sp"
        android:paddingBottom="25dp"
        android:hint="@string/Videogame_idea_field"
        android:textColor="@color/teal_700" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />



</LinearLayout>